<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_registration"
                    android:textAppearance="@style/close"
                    android:textSize="32sp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="26dp"
                    android:layout_marginHorizontal="60dp"
                    android:id="@+id/textEmailReg"/>

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:paddingStart="16dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:textColorHint="#7DD5FF"
                    android:textColor="#00ACFF"
                    android:layout_below="@+id/textEmailReg"/>

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:paddingStart="16dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="#7DD5FF"
                    android:textColor="#00ACFF"
                    android:layout_below="@+id/input_nickname"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:paddingStart="16dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textColorHint="#7DD5FF"
                    android:textColor="#00ACFF"
                    android:layout_below="@+id/input_password"/>

                <EditText
                    android:id="@+id/input_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:paddingStart="16dp"
                    android:inputType="text"
                    android:hint="@string/set_nickname"
                    android:textColorHint="#7DD5FF"
                    android:textColor="#00ACFF"
                    android:layout_below="@+id/input_name"/>

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginHorizontal="32dp"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:paddingStart="16dp"
                    android:inputType="text"
                    android:hint="@string/set_name"
                    android:textColorHint="#7DD5FF"
                    android:textColor="#00ACFF"
                    android:layout_below="@+id/input_email"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_below="@+id/input_confirm_password"
                    android:text="@string/register"
                    android:textAppearance="@style/start_stop"
                    android:background="@drawable/sign_in_register"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>
</RelativeLayout>