<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/android_runner_navigation"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/account_image"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#00ACFF" />

                <View
                    android:layout_width="244dp"
                    android:layout_height="2dp"
                    android:layout_marginVertical="16dp"
                    android:layout_gravity="center"
                    android:background="@drawable/line_1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickStatus">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/status"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_status"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickHistory">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/running_history"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_running_history"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickMarathons">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/marathons"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_marathons"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickStore">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/store"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_store"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickNewsFeed">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/my_posts"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_my_posts"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickFriends">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/friends"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_friends"/>

                </LinearLayout>

                <View
                    android:layout_width="244dp"
                    android:layout_height="2dp"
                    android:layout_marginVertical="16dp"
                    android:layout_gravity="center"
                    android:background="@drawable/line_1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickAccountSettings">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/account_settings"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_settings"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="ClickSignOut">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sign_out"
                        android:textAppearance="@style/home"
                        android:layout_marginStart="38dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="38dp"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/ic_sign_out"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>